gnuplot module generate complete cpu charts. Fixed statistics provided by scheduler.

--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -2,11 +2,12 @@ include ../Makefile.inc
 
 EXECUTABLE_NAME=wallmond
 SRC=*.cpp *.h
+CFLAGS= -Wno-multichar -rdynamic
 
 all: wallmond
 
 wallmond: $(SRC)
-	$(CC) $(CFLAGS_COMMON) -o $@ $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON)
+	$(CC) $(CFLAGS) -o $@ $(SRC) $(INC_PATH) $(LIB_PATH) $(LIB_COMMON)
 
 clean:
 	rm -f *.o
