--- a/lib/touchmanager/Makefile
+++ b/lib/touchmanager/Makefile
@@ -7,6 +7,6 @@ clean:
 	rm -f *.gch
 
 TouchManager: STouchManager.h STouchManager.cpp WVGeometry.h WVGeometry.cpp
-	$(CC) -O2 -c -fPIC -Wno-multichar $(INC_PATH) $(LIB_PATH) $?
+	$(CC) -c -fPIC -Wno-multichar $(INC_PATH) $(LIB_PATH) $?
 	ar rcs lib$@.a STouchManager.o WVGeometry.o
 	mv *.a ..
