--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,71 +4,62 @@ CFLAGS = -c -fPIC
 DIRS_PRE = stubs 
 DIRS_POST = touchmanager
 
+%.o:%.cpp
+	$(CC) -o $@ -c -fPIC $(INC_PATH) $<
 
+all: SubDirsPre current SubDirsPost
+	
+current: SubDirsPre ClassLoader System Config PracticalSocket ByteBuffer LinuxProcessMonitor LinuxProcessMonitorLight IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector
 
-all: SubDirsPre ClassLoader wSystem Config PracticalSocket ByteBuffer LinuxProcessMonitor LinuxProcessMonitorLight IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector SubDirsPost
-	
-clean: 	
-	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE} clean) ; done
-	rm -f *.o
-	rm -f *.a
-	rm -f *.gch
-	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE} clean) ; done
-	
-SubDirsPre:
+SubDirsPre: 
 	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE}) ; done
 
-wSystem: System.h System.cpp 
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a System.o
+SubDirsPost: SubDirsPre current
+	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE}) ; done
 
-Config: Config.h Config.cpp
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
+clean: 	
+	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE} clean) ; done
+	${CLEAN}
+	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE} clean) ; done
 
-PracticalSocket: PracticalSocket.h PracticalSocket.cpp
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
-
-ClassLoader: ClassLoader.h ClassLoader.cpp
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
-
-ByteBuffer: ByteBuffer.h ByteBuffer.cpp 
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
-
-LinuxProcessMonitor: LinuxProcessMonitor.h LinuxProcessMonitor.cpp 
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar rcs lib$@.a $@.o
+System: System.o 
+	${MAKE_STATIC_LIB}
 	
-LinuxProcessMonitorLight: LinuxProcessMonitorLight.h LinuxProcessMonitorLight.cpp 
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar rcs lib$@.a $@.o
+Config: Config.o
+	${MAKE_STATIC_LIB}
 
-IoLogger: IoLogger.h IoLogger.cpp
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
+PracticalSocket: PracticalSocket.o
+	${MAKE_STATIC_LIB}
 
-WallView: WallView.h WallView.cpp
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
+ClassLoader: ClassLoader.o
+	${MAKE_STATIC_LIB}
 
-PidMonitor: PidMonitor.h PidMonitor.cpp
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o
+ByteBuffer: ByteBuffer.o
+	${MAKE_STATIC_LIB}
+
+LinuxProcessMonitor: LinuxProcessMonitor.o
+	${MAKE_STATIC_LIB}
+
+LinuxProcessMonitorLight: LinuxProcessMonitorLight.o 
+	${MAKE_STATIC_LIB}
+
+IoLogger: IoLogger.o
+	${MAKE_STATIC_LIB}
+
+WallView: WallView.o
+	${MAKE_STATIC_LIB}
+
+PidMonitor: PidMonitor.o
+	${MAKE_STATIC_LIB}
 
 # Note that the protobuf stub (MonitorDispatcher.pb.o) is included
-MonitorDispatcher: PracticalSocket.o ClassLoader.o MonitorDispatcher.h MonitorDispatcher.cpp IMonitorManager.h
-	$(CC) $(CFLAGS) $(INC_PATH) $?
-	ar cru lib$@.a $@.o stubs/MonitorDispatcher.pb.o
+MonitorDispatcher: MonitorDispatcher.o stubs/MonitorDispatcher.pb.o PracticalSocket.o ClassLoader.o
+	${MAKE_STATIC_LIB}
 
 # Note that the protobuf stub (ProcessCollector.pb.o) is included
-OBJS=LinuxProcessMonitorLight.o PidMonitor.o stubs/ProcessCollector.pb.o
-ProcessCollector: $(OBJS) ProcessCollector.h ProcessCollector.cpp
-	$(CC) $(CFLAGS_SO_PREPARE) $(INC_PATH) $?
-	$(CC) $(CFLAGS_SO_CREATE) $(LIB_PATH) -o lib$@.so $(OBJS) ProcessCollector.o $(LIB)
-		
-SubDirsPost:
-	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE}) ; done
-	
+# This library is build as a shared library due to some problems
+# with protobuf and static linking
+ProcessCollector: ProcessCollector.o LinuxProcessMonitorLight.o PidMonitor.o stubs/ProcessCollector.pb.o
+	${MAKE_SHARED_LIB}
+			
+include ../Makefile.dep.inc
