--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,26 +1,25 @@
 include ../Makefile.inc
 
 CFLAGS = -c -fPIC
-DIRS_PRE = stubs 
-DIRS_POST = touchmanager
 
 %.o:%.cpp
 	$(CC) -o $@ -c -fPIC $(INC_PATH) $<
 
-all: SubDirsPre current SubDirsPost
+all: stubs_
+	make all_
 	
-current: SubDirsPre ClassLoader System Config PracticalSocket ByteBuffer LinuxProcessMonitor LinuxProcessMonitorLight IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector
-
-SubDirsPre: 
-	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE}) ; done
-
-SubDirsPost: SubDirsPre current
-	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE}) ; done
-
+all_: touchmanager_ ClassLoader System Config PracticalSocket ByteBuffer LinuxProcessMonitor LinuxProcessMonitorLight IoLogger WallView PidMonitor MonitorDispatcher ProcessCollector
+	
 clean: 	
-	@ for dir in ${DIRS_PRE}; do (cd $${dir}; ${MAKE} clean) ; done
 	${CLEAN}
-	@ for dir in ${DIRS_POST}; do (cd $${dir}; ${MAKE} clean) ; done
+	$(MAKE) clean -C stubs
+	$(MAKE) clean -C touchmanager
+	
+stubs_:
+	$(MAKE) -C stubs
+	
+touchmanager_:
+	$(MAKE) -C touchmanager
 
 System: System.o 
 	${MAKE_STATIC_LIB}
@@ -35,7 +34,7 @@ ClassLoader: ClassLoader.o
 	${MAKE_STATIC_LIB}
 
 ByteBuffer: ByteBuffer.o
-	${MAKE_STATIC_LIB}
+	${MAKE_STATIC_LIB} 
 
 LinuxProcessMonitor: LinuxProcessMonitor.o
 	${MAKE_STATIC_LIB}
@@ -53,13 +52,13 @@ PidMonitor: PidMonitor.o
 	${MAKE_STATIC_LIB}
 
 # Note that the protobuf stub (MonitorDispatcher.pb.o) is included
-MonitorDispatcher: MonitorDispatcher.o stubs/MonitorDispatcher.pb.o PracticalSocket.o ClassLoader.o
-	${MAKE_STATIC_LIB}
+MonitorDispatcher: MonitorDispatcher.o PracticalSocket.o ClassLoader.o
+	${MAKE_STATIC_LIB} PracticalSocket.o ClassLoader.o stubs/MonitorDispatcher.pb.o
 
 # Note that the protobuf stub (ProcessCollector.pb.o) is included
 # This library is build as a shared library due to some problems
 # with protobuf and static linking
-ProcessCollector: ProcessCollector.o LinuxProcessMonitorLight.o PidMonitor.o stubs/ProcessCollector.pb.o
-	${MAKE_SHARED_LIB}
+ProcessCollector: ProcessCollector.o LinuxProcessMonitorLight.o PidMonitor.o
+	${MAKE_SHARED_LIB} LinuxProcessMonitorLight.o PidMonitor.o stubs/ProcessCollector.pb.o
 			
 include ../Makefile.dep.inc
