--- a/monitors/gnuplot/Makefile
+++ b/monitors/gnuplot/Makefile
@@ -1,16 +1,17 @@
 include ../../Makefile.inc
 
-LIBs=-lSystem -lProcessCollector
+LIBS=-lSystem -lProcessCollector
 
-all: gnuplot.so
+all: libgnuplot.so
 			
-%.o:%.cpp
-	$(CC) -o $@ $(ROCKSVV) $(CFLAGS_SO_PREPARE) $(INC_PATH) $<
-
-gnuplot.so: $(OBJS)
-	$(CC) -o $@ $(CFLAGS_SO_CREATE) $(LIB_PATH) $^ $(LIBS)
-	mv *.so ../bin
-	
 clean:
 	${CLEAN}
 
+%.o:%.cpp
+	$(CC) -o $@ $(CFLAGS_SO_PREPARE) $(INC_PATH) $<
+
+libgnuplot.so: $(OBJS)
+	$(CC) -o $@ $(CFLAGS_SO_CREATE) $(LIB_PATH) $^ $(LIBS)
+	mv *.so ../bin
+	
+include ../../Makefile.dep.inc
