Network utilization display bug fixed. State synchronization between tables added.

--- a/lib/stubs/Makefile
+++ b/lib/stubs/Makefile
@@ -8,7 +8,7 @@ MAKE_PROTOBUF_MESSAGE_LIB=ar cru lib$@Message.a $@.pb.o
 all: GenerateStubs
 	make _all
 	
-_all: MonitorDispatcher ProcessCollector Wallmon
+_all: MonitorDispatcher ProcessCollector Wallmon TableState
 	mv *.a ..
 
 clean:
@@ -24,6 +24,9 @@ ProcessCollector: ProcessCollector.pb.o
 	${MAKE_PROTOBUF_MESSAGE_LIB}
 
 Wallmon:  Wallmon.pb.o
+	${MAKE_PROTOBUF_MESSAGE_LIB}
+
+TableState:  TableState.pb.o
 	${MAKE_PROTOBUF_MESSAGE_LIB}
 
 include ../../Makefile.dep.inc
