--- a/modules/gnuplot/Makefile
+++ b/modules/gnuplot/Makefile
@@ -1,6 +1,6 @@
 include ../../Makefile.inc
 
-LIBS=-lSystem -lProcessCollector
+LIBS=-lSystem -lProcessCollector -lWallView
 
 all: libgnuplot.so
 			
@@ -8,10 +8,10 @@ clean:
 	${CLEAN}
 
 %.o:%.cpp
-	$(CC) -o $@ -fpermissive $(CFLAGS_SO_PREPARE) $(INC_PATH) $<
+	$(CC) -o $@ $(CFLAGS_SO_PREPARE) $(INC_PATH) $<
 
 libgnuplot.so: $(OBJS)
-	$(CC) -o -fpermissive $@ $(CFLAGS_SO_CREATE) $(LIB_PATH) $^ $(LIBS)
+	$(CC) -o $@ $(CFLAGS_SO_CREATE) $(LIB_PATH) $^ $(LIBS)
 	mv *.so ../bin
 	
 include ../../Makefile.dep.inc
