--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.inc
 
-LIBS=-lpthread -lgtest -lboost_thread -ldl -lev -lglog -lprotobuf -lPracticalSocket -lPs -lLinuxProcessMonitorLight -lClassLoader -lByteBuffer -lConfig -lSystem -lWallmonMessage -lIoLogger -lMonitorDispatcher -lWallView -lPidMonitor
+LIBS=-lpthread -lgtest -lboost_thread -lboost_system -ldl -lev -lglog -lprotobuf -lPracticalSocket -lPs -lLinuxProcessMonitorLight -lClassLoader -lByteBuffer -lConfig -lSystem -lWallmonMessage -lIoLogger -lMonitorDispatcher -lWallView -lPidMonitor
 
 all: test
 
